refactor: 컨벤션 내용 추가 반영